--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.SocialMediaGamer" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <!-- Base application theme for light mode only. -->
+    <style name="Base.Theme.SocialMediaGamer" parent="Theme.Material3.Light.NoActionBar">
+        <!-- Customize your light theme here. -->
     </style>
 </resources>
